package basho.search.analysis;
option java_package = "com.basho.search.proto";

message AnalysisRequest {
  required string text = 1;
  optional string analyzer_factory = 2;
  repeated string analyzer_args = 3;
}

message AnalysisStop {
  optional int32 wait = 1;
}

message AnalysisError {
  required string message = 1;
  optional string description = 2;
  optional int32 error_number = 3;
}

message AnalysisResult {
  optional string token = 1;
  required int32 done = 2;
}